2014-10-11  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Mathematical Review.
	* Fixed crashing bug with some ISBNdb results (Bug 339063).
	* Updated Producer results for IMDb and TheMovieDB fetchers (Bug 336765).

2014-06-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.9.

2014-05-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with writing out link-only images in HTML exporter (Bug 330649).

2014-05-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed character encoding in Allocine fetcher (Bug 334527).
	* Removed IMDb country choice since it's now unavailable (Bug 330641).

2014-04-27  Robby Stephenson  <robby@periapsis.org>

	* Disabled Discogs image fetching since OAuth is now required.

2014-04-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed CSV importer bug, causing a hang (Bug 329677, Debian Bug 729503).

2014-01-31  Robby Stephenson  <robby@periapsis.org>

	* Updated TheMovieDB fetcher to API version 3.

2014-01-30  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug in IMDB fetcher (Bug 330591).

2013-11-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug in command-line importing (Debian bug 729499).

2013-11-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed type error in Microsoft Academic Search fetcher.

2013-11-07  Robby Stephenson <robby@periapsis.org>

	* Fixed error in setting modified date for entry in certain cases (Bug 326911).

2013-11-06  Robby Stephenson <robby@periapsis.org>

	* Improved GCstar import and export to handle custom GCstar fields.

2013-10-13  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb fetcher (Bug 325673).

2013-07-07  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.8.

2013-07-04  Robby Stephenson  <robby@periapsis.org>

	* Disabled fetchers for Spanish Ministry of Culture, Beyazperde, Filmstarts, ScreenRush, and Sensacine.

2013-07-01  Robby Stephenson  <robby@periapsis.org>
